--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,9 +26,9 @@ jobs:
     - name: Build
       run: dotnet build -c Release --no-restore 
     - name: Publish
-      run: dotnet publish -c Release -o publish
+      run: dotnet publish -c Release -o "${{ github.workspace }}/publish"
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
         name: WebsiteChangeDetector
-        path: publish
+        path: ${{ github.workspace }}/publish
