--- a/src/WebsiteChangeDetector/appsettings.json
+++ b/src/WebsiteChangeDetector/appsettings.json
@@ -2,11 +2,13 @@
   "appSettings": {
     "Url": "https://www.website.com",
     "Headless": "false",
-    "PollDelayInSeconds": "5",
+    "PollDelayInSeconds": "0",
     "PageLoadDelayInSeconds": "5",
     "TwilioAccountSid": "",
     "TwilioAuthToken": "",
     "TwilioFromPhoneNumber": "",
-    "TwilioToPhoneNumber": ""
+    "TwilioToPhoneNumber": "",
+    "SharpEmail": "",
+    "SharpPassword":  ""
   }
 }
