Setup DI and logging

--- a/src/WebsiteChangeDetector/appsettings.json
+++ b/src/WebsiteChangeDetector/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "appSettings": {
+  "Service": {
     "Url": "https://www.website.com",
     "Headless": "false",
     "PollDelayInSeconds": "0",
@@ -9,6 +9,21 @@
     "TwilioFromPhoneNumber": "",
     "TwilioToPhoneNumber": "",
     "SharpEmail": "",
-    "SharpPassword":  ""
+    "SharpPassword": ""
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "Console": {
+      "FormatterName": "Simple",
+      "FormatterOptions": {
+        "SingleLine": true,
+        "IncludeScopes": true,
+        "TimestampFormat": "yyyy-MM-dd HH:mm:ss "
+      }
+    }
   }
 }
