Add balboa tennis automation

--- a/src/WebsiteChangeDetector/appsettings.json
+++ b/src/WebsiteChangeDetector/appsettings.json
@@ -1,14 +1,16 @@
 {
   "Service": {
     "Headless": "false",
-    "PollDelayInSeconds": "0",
+    "PollDelayInSeconds": "10",
     "PageLoadDelayInSeconds": "5",
     "TwilioAccountSid": "",
     "TwilioAuthToken": "",
     "TwilioFromPhoneNumber": "",
     "TwilioToPhoneNumber": "",
     "SharpEmail": "",
-    "SharpPassword": ""
+    "SharpPassword": "",
+    "BalboaTennisEmail": "",
+    "BalboaTennisPassword": ""
   },
   "Logging": {
     "LogLevel": {
