--- a/src/WebsiteChangeDetector/WebsiteChangeDetector.csproj
+++ b/src/WebsiteChangeDetector/WebsiteChangeDetector.csproj
@@ -13,7 +13,11 @@
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="89.0.4389.2300" />
-    <PackageReference Include="Twilio" Version="5.55.0" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Twilio" Version="5.57.0" />
   </ItemGroup>
 
   <ItemGroup>
