--- a/src/WebsiteChangeDetector/appsettings.json
+++ b/src/WebsiteChangeDetector/appsettings.json
@@ -13,18 +13,13 @@
     "BalboaTennisEmail": "",
     "BalboaTennisPassword": ""
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    },
-    "Console": {
-      "FormatterName": "Simple",
-      "FormatterOptions": {
-        "SingleLine": true,
-        "IncludeScopes": true,
-        "TimestampFormat": "yyyy-MM-dd HH:mm:ss "
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Verbose",
+      "Override": {
+        "System": "Information",
+        "Microsoft": "Information",
+        "Microsoft.EntityFrameworkCore": "Information"
       }
     }
   }
