--- a/src/WebsiteChangeDetector/appsettings.json
+++ b/src/WebsiteChangeDetector/appsettings.json
@@ -14,13 +14,21 @@
     "BalboaTennisPassword": ""
   },
   "Serilog": {
+    "Using": [ "Serilog", "Serilog.Sinks.Console" ],
     "MinimumLevel": {
       "Default": "Verbose",
       "Override": {
         "System": "Information",
-        "Microsoft": "Information",
-        "Microsoft.EntityFrameworkCore": "Information"
+        "Microsoft": "Information"
       }
-    }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:MM-dd HH:mm:ss} {Level:u3}] {ClassName}: {Message:lj} {NewLine}{Exception}"
+        }
+      }
+    ]
   }
 }
