--- a/src/WebsiteChangeDetector/appsettings.json
+++ b/src/WebsiteChangeDetector/appsettings.json
@@ -16,7 +16,7 @@
   "Serilog": {
     "Using": [ "Serilog", "Serilog.Sinks.Console" ],
     "MinimumLevel": {
-      "Default": "Verbose",
+      "Default": "Debug",
       "Override": {
         "System": "Information",
         "Microsoft": "Information"
