--- a/src/WebsiteChangeDetector/appsettings.json
+++ b/src/WebsiteChangeDetector/appsettings.json
@@ -28,6 +28,12 @@
         "Args": {
           "outputTemplate": "[{Timestamp:MM-dd HH:mm:ss} {Level:u3}] {ClassName}: {Message:lj} {NewLine}{Exception}"
         }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
       }
     ]
   }
