Add bd automation

--- a/src/WebsiteChangeDetector/appsettings.json
+++ b/src/WebsiteChangeDetector/appsettings.json
@@ -11,7 +11,9 @@
     "SharpEmail": "",
     "SharpPassword": "",
     "BalboaTennisEmail": "",
-    "BalboaTennisPassword": ""
+    "BalboaTennisPassword": "",
+    "ExpenseReportEmail": "",
+    "ExpenseReportPassword": ""
   },
   "Serilog": {
     "MinimumLevel": {
