Auto fill report

--- a/src/WebsiteChangeDetector/appsettings.json
+++ b/src/WebsiteChangeDetector/appsettings.json
@@ -13,7 +13,8 @@
     "BalboaTennisEmail": "",
     "BalboaTennisPassword": "",
     "ExpenseReportEmail": "",
-    "ExpenseReportPassword": ""
+    "ExpenseReportPassword": "",
+    "ExpenseReportTransactionDate": ""
   },
   "Serilog": {
     "MinimumLevel": {
