Move dates into app settings

--- a/src/WebsiteChangeDetector/appsettings.json
+++ b/src/WebsiteChangeDetector/appsettings.json
@@ -12,6 +12,14 @@
     "SharpPassword": "",
     "BalboaTennisEmail": "",
     "BalboaTennisPassword": "",
+    "BalboaTennisSearchDates": [
+      "2021-04-20",
+      "2021-04-21",
+      "2021-04-22",
+      "2021-04-23",
+      "2021-04-26",
+      "2021-04-27"
+    ],
     "ExpenseReportEmail": "",
     "ExpenseReportPassword": "",
     "ExpenseReportTransactionDate": ""
