--- a/src/WebsiteChangeDetector/appsettings.json
+++ b/src/WebsiteChangeDetector/appsettings.json
@@ -10,7 +10,7 @@
     "TwilioToPhoneNumber": "",
     "SharpEmail": "",
     "SharpPassword": "",
-    "BalboaTennisEmail": "",
+    "BalboaTennisUser": "",
     "BalboaTennisPassword": "",
     "BalboaTennisSearchDates": [
       "2021-04-20",
