--- a/src/WebsiteChangeDetector/appsettings.json
+++ b/src/WebsiteChangeDetector/appsettings.json
@@ -12,7 +12,7 @@
     "SharpPassword": "",
     "BalboaTennisUser": "",
     "BalboaTennisPassword": "",
-    "BalboaTennisSearchDates": [
+    "BalboaTennisBlackoutDates": [
       "2021-04-20",
       "2021-04-21"
     ],
