Add sendgrid email client

--- a/src/WebsiteChangeDetector/WebsiteChangeDetector.csproj
+++ b/src/WebsiteChangeDetector/WebsiteChangeDetector.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="91.0.4472.1900" />
+    <PackageReference Include="SendGrid" Version="9.23.2" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
