--- a/src/WebsiteChangeDetector/appsettings.json
+++ b/src/WebsiteChangeDetector/appsettings.json
@@ -8,6 +8,7 @@
     "TwilioAuthToken": "",
     "TwilioFromPhoneNumber": "",
     "TwilioToPhoneNumber": "",
+    "SendGridApiKey": "",
     "SharpEmail": "",
     "SharpPassword": "",
     "BalboaTennisUser": "",
