Create console application

--- a/src/WebsiteChangeDetector.Console/appsettings.json
+++ b/src/WebsiteChangeDetector.Console/appsettings.json
@@ -1,5 +1,8 @@
 {
-  "Service": {
+  "ServiceOptions": {
+    "PollDelayInSeconds": 20
+  },
+  "WebsiteChangeDetectorOptions": {
     "Headless": "false",
     "PollDelayInSeconds": "10",
     "PageLoadDelayInSeconds": "5",
