Add additional config options

--- a/src/WebsiteChangeDetector.Console/appsettings.json
+++ b/src/WebsiteChangeDetector.Console/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
   "ServiceOptions": {
     "PollDelayInSeconds": 20
   },
@@ -16,6 +19,10 @@
     "SharpPassword": "",
     "BalboaTennisUser": "",
     "BalboaTennisPassword": "",
+    "BalboaTennisGuestName": "Alison",
+    "BalboaTennisNumberOfDays": "7",
+    "BalboaTennisStartTime": "5:00PM",
+    "BalboaTennisLengthInMinutes": "30",
     "BalboaTennisBlackoutDates": [
       "2021-04-20",
       "2021-04-21"
