Add option for website name

--- a/src/WebsiteChangeDetector.Console/appsettings.json
+++ b/src/WebsiteChangeDetector.Console/appsettings.json
@@ -15,6 +15,7 @@
     "TwilioFromPhoneNumber": "",
     "TwilioToPhoneNumber": "",
     "SendGridApiKey": "",
+    "WebsiteName": "Balboa",
     "SharpEmail": "",
     "SharpPassword": "",
     "BalboaTennisUser": "",
