--- a/src/WebsiteChangeDetector.Console/WebsiteChangeDetector.Console.csproj
+++ b/src/WebsiteChangeDetector.Console/WebsiteChangeDetector.Console.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -21,10 +21,6 @@
   <ItemGroup>
     <Content Include="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
     <Content Include="appsettings.*.json" DependentUpon="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="appsettings.overrides.json" />
   </ItemGroup>
 
   <ItemGroup>
