Persist blackout dates from config

--- a/src/WebsiteChangeDetector.Console/appsettings.json
+++ b/src/WebsiteChangeDetector.Console/appsettings.json
@@ -24,10 +24,7 @@
     "BalboaTennisNumberOfDays": "7",
     "BalboaTennisStartTime": "5:00PM",
     "BalboaTennisLengthInMinutes": "30",
-    "BalboaTennisBlackoutDates": [
-      "2021-04-20",
-      "2021-04-21"
-    ],
+    "BalboaTennisBlackoutDates": [],
     "ExpenseReportEmail": "",
     "ExpenseReportPassword": "",
     "ExpenseReportTransactionDate": ""
