Add file logging

--- a/src/WebsiteChangeDetector.Console/appsettings.json
+++ b/src/WebsiteChangeDetector.Console/appsettings.json
@@ -45,6 +45,15 @@
         }
       },
       {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\home\\LogFiles\\Application\\diagnostics-.txt",
+          "shared": true,
+          "flushToDiskInterval": 5,
+          "rollingInterval": "Day"
+        }
+      },
+      {
         "Name": "Seq",
         "Args": {
           "serverUrl": "http://localhost:5341"
