Use google calendar api

--- a/src/WebsiteChangeDetector.Console/appsettings.json
+++ b/src/WebsiteChangeDetector.Console/appsettings.json
@@ -16,12 +16,11 @@
     "BalboaTennisUser": "",
     "BalboaTennisPassword": "",
     "BalboaTennisGuestName": "Alison",
-    "BalboaTennisNumberOfDays": "7",
-    "BalboaTennisStartTime": "5:00PM",
-    "BalboaTennisBlackoutDates": [],
+    "BalboaTennisCourts": [ 23, 22, 11, 12, 13, 14, 15, 16, 17, 5, 6, 7, 8, 10, 18, 19, 20, 21 ],
     "ExpenseReportEmail": "",
     "ExpenseReportPassword": "",
-    "ExpenseReportTransactionDate": ""
+    "ExpenseReportTransactionDate": "",
+    "GoogleServiceAccountCredential": ""
   },
   "Serilog": {
     "MinimumLevel": {
