--- a/src/WebsiteChangeDetector/WebsiteChangeDetector.csproj
+++ b/src/WebsiteChangeDetector/WebsiteChangeDetector.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="Google.Apis.Calendar.v3" Version="1.52.0.2312" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
