--- a/src/WebsiteChangeDetector.Console/appsettings.json
+++ b/src/WebsiteChangeDetector.Console/appsettings.json
@@ -40,7 +40,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "D:\\home\\LogFiles\\diagnostics-.txt",
+          "path": "D:\\home\\LogFiles\\WebsiteChangeDetector-.txt",
           "shared": true,
           "flushToDiskInterval": 5,
           "rollingInterval": "Day"
